# stats_ubuntu

./: .gitignore  README.md  pyproject.toml
scripts/: setup-ubuntu.sh
src/stats_ubuntu/: app.py  formatting.py  metrics.py
