[project]
name = "stats-ubuntu"
version = "0.1.0"
description = "A lightweight Ubuntu/GNOME status monitor for CPU, NVIDIA GPU, memory, and network."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
stats-ubuntu = "stats_ubuntu.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
